--- a/apps/mynefesh_react_native/package.json
+++ b/apps/mynefesh_react_native/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "mongoose": "^8.4.0",
     "react-native": "0.74.1"
   },
   "devDependencies": {
